src/objects/Curriculum_Certification_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certification Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Curriculum Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Object_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Curriculum Certification Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certification_Name__c</columns>
        <columns>Curriculum_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Curriculum Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curriculum Certification Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>